--- a/src/app/character-generator/stats/stats.component.html
+++ b/src/app/character-generator/stats/stats.component.html
@@ -1,26 +1,26 @@
 <div class="bb-thin">
   <div class="row">
-    <div class="col-md-3 col-6">
+    <div class="col-md-3 col-6 level">
       <div class="attribute-block">
         <div class="attribute-title">Level</div>
         <span class="primary">{{character.level.number}}</span>
       </div>
     </div>
-    <div class="col-md-3 col-6">
+    <div class="col-md-3 col-6 armor-class">
       <div class="attribute-block">
         <div class="attribute-title">Armor Class</div>
         <span class="primary">{{character.armorClass}}</span>
         <span class="secondary">({{character.equippedArmorString}})</span>
       </div>
     </div>
-    <div class="col-md-3 col-6">
+    <div class="col-md-3 col-6 hit-points">
       <div class="attribute-block">
         <div class="attribute-title">Hit Points</div>
         <span class="primary">{{character.hitPoints}}</span>
         <span class="secondary">({{character.hitPointFormula}})</span>
       </div>
     </div>
-    <div class="col-md-3 col-6">
+    <div class="col-md-3 col-6 speed">
       <dnd-speed [speed]="character.speed"></dnd-speed>
     </div>
   </div>
