--- a/src/app/character-generator/features/feature.component.html
+++ b/src/app/character-generator/features/feature.component.html
@@ -1,3 +1,4 @@
 <div class="feature">
-    <h3 class="feature-name">{{feature.name}}.</h3><span class="feature-description" [innerHTML]="feature.description"></span>
+    <h3 class="feature-name">{{feature.name}}.<dnd-source-reference *ngIf="feature.reference" [reference]="feature.reference"></dnd-source-reference></h3>
+    <span class="feature-description" [innerHTML]="feature.description"></span>
 </div>
