Add fixed generate button.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,6 +10,7 @@ $mdi-font-path: "~mdi/fonts";
 @import "print.scss";
 @import "bootstrap.scss";
 @import "theme.scss";
+@import "buttons.scss";
 @import "blocks.scss";
 @import "features.scss";
 @import "codemirror.scss";
