--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,6 +8,7 @@ $mdi-font-path: "~mdi/fonts";
 @import '~spinkit/scss/spinners/9-cube-grid';
 
 @import "print.scss";
+@import "loading-splash.scss";
 @import "bootstrap.scss";
 @import "theme.scss";
 @import "buttons.scss";
