--- a/src/styles/print.scss
+++ b/src/styles/print.scss
@@ -12,6 +12,10 @@
         display: none !important;
     }
 
+    dnd-view-mode {
+        display: none !important;
+    }
+
     dnd-character-generator {
         .jumbotron {
             display: none !important;
