--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,7 +10,7 @@ $mdi-font-path: "~mdi/fonts";
 @import "print.scss";
 @import "loading-splash.scss";
 @import "bootstrap.scss";
-@import "theme.scss";
+@import "forms.scss";
 @import "buttons.scss";
 @import "blocks.scss";
 @import "features.scss";
