--- a/src/app/name-generator/name-generator.component.html
+++ b/src/app/name-generator/name-generator.component.html
@@ -6,7 +6,8 @@
     </div>
     <div class="row">
       <div class="col-12 text-right">
-        <button type="button" class="btn btn-primary btn-lg" (click)="onGenerateClick()">Generate Names</button>
+        <button type="button" class="btn btn-primary btn-lg btn-icon" (click)="onGenerateClick()"><i class="mdi mdi-shuffle-variant"></i>Generate Names</button>
+        <button class="btn btn-primary btn-lg btn-bottom-right" (click)="onGenerateClick()"><i class="mdi mdi-shuffle-variant"></i><span class="sr-only">Generate Names</span></button>
       </div>
     </div>
   </div>
