--- a/src/app/character-generator/character/character.component.html
+++ b/src/app/character-generator/character/character.component.html
@@ -16,6 +16,7 @@
 <dnd-feature-list [features]="character.actions" title="Actions"></dnd-feature-list>
 <div class="row mt-2 mb-2 export">
   <div class="col-12 text-right">
+    <button type="button" class="btn btn-primary btn-lg" (click)="onPrintClick()">Print</button>
     <button type="button" class="btn btn-primary btn-lg" (click)="onExportClick()">Export</button>
   </div>
 </div>
