Remove feature text and just display a list.

--- a/src/app/character-generator/features/feature.component.html
+++ b/src/app/character-generator/features/feature.component.html
@@ -1,9 +1,3 @@
-<div class="feature" *ngIf="viewMode === ViewMode.Detailed">
-    <h3 class="feature-name">{{feature.name}}.
-        <dnd-source-reference *ngIf="feature.reference" [reference]="feature.reference"></dnd-source-reference>
-    </h3>
-    <span class="feature-description" [innerHTML]="feature.description"></span>
-</div>
-<span class="feature" *ngIf="viewMode === ViewMode.Basic">
+<span class="feature">
     {{feature.name}}<dnd-source-reference *ngIf="feature.reference" [reference]="feature.reference"></dnd-source-reference>
 </span>
