--- a/src/app/character-generator/features/feature-list.component.html
+++ b/src/app/character-generator/features/feature-list.component.html
@@ -1,10 +1,8 @@
 <div class="feature-list bt-thick">
     <div class="clearfix mt-2">
-        <dnd-view-mode #viewMode></dnd-view-mode>
-        <h5 class="" *ngIf="title">{{title}}</h5>
+        <h5>Features</h5>
     </div>
     <div class="features">
-        <dnd-feature [ngClass]="{ 'comma-separated': viewMode.mode === ViewMode.Basic }" *ngFor="let feature of sortedFeatures" [feature]="feature"
-            [viewMode]="viewMode.mode"></dnd-feature>
+        <dnd-feature class="comma-separated" *ngFor="let feature of sortedFeatures" [feature]="feature"></dnd-feature>
     </div>
 </div>
