Add actions to characters.

--- a/src/app/character-generator/character/character.component.html
+++ b/src/app/character-generator/character/character.component.html
@@ -12,7 +12,7 @@
     </div>
   </div>
 </div>
-<dnd-feature-list [features]="character.otherFeatures"></dnd-feature-list>
+<dnd-feature-list [features]="character.features"></dnd-feature-list>
 <dnd-action-list [actions]="character.actions"></dnd-action-list>
 <div class="row mt-2 mb-2 export">
   <div class="col-12 text-right">
