Add more info to about.

--- a/src/app/core/about/about.component.html
+++ b/src/app/core/about/about.component.html
@@ -5,6 +5,9 @@
   </div>
 </div>
 <div class="container">
+  <h2>Code/Issues</h2>
+  <p>The code for this project is freely available under the MIT licence over at <a href="https://github.com/trwolfe13/dnd-5e-tools" target="_blank"><i class="mdi mdi-github-circle"></i> trwolfe13/dnd-5e-tools</a> over at GitHub. Feel free to check it out, have a play and maybe even contribute! Or, if you find any problems, feel free to log an issue over at the GitHub repo.</p>
+
   <h2>Acknowledgements</h2>
   <p>This project would not have been possible without input from the below sources.</p>
 
@@ -15,5 +18,5 @@
   <p>A lot of the names (specifically surnames of the form '[Adjective][noun]', like "Brokenshield") are inspired by <a href="https://www.fantasynamegenerators.com" target="_blank">fantasynamegenerators.com</a>, and you should definitely check out the site if you get the chance.</p>
 
   <h3>Markov Generation</h3>
-  <p>The name generation is largely achieved using Markov models, with <a href="https://github.com/trwolfe13/markov-typescript" target="_blank">my own implemention</a> inspired by <a href="https://www.github.com/otac0n/markov">otac0n/markov</a> and <a href="https://www.github.com/chriscore/MarkovSharp">chriscore/MarkovSharp</a>.</p>
+  <p>The name generation is largely achieved using Markov models, with <a href="https://github.com/trwolfe13/markov-typescript" target="_blank"><i class="mdi mdi-github-circle"></i> my own implemention</a> inspired by <a href="https://www.github.com/otac0n/markov"><i class="mdi mdi-github-circle"></i> otac0n/markov</a> and <a href="https://www.github.com/chriscore/MarkovSharp"><i class="mdi mdi-github-circle"></i> chriscore/MarkovSharp</a>.</p>
 </div>
