Add initiative tracker module.

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -4,6 +4,7 @@
       <a routerLink="/character-generator" (click)="onNavigate($event)" routerLinkActive="active" class="list-group-item list-group-item-action">Character Generator</a>
       <a routerLink="/name-generator" (click)="onNavigate($event)" routerLinkActive="active" class="list-group-item list-group-item-action">Name Generator</a>
       <a routerLink="/item-generator" (click)="onNavigate($event)" routerLinkActive="active" class="list-group-item list-group-item-action">Item Generator</a>
+      <a routerLink="/initiative" (click)="onNavigate($event)" routerLinkActive="active" class="list-group-item list-group-item-action">Initiative Tracker</a>
     </div>
   </div>
 </div>
