--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -5,6 +5,12 @@
     font-weight: bold;
 }
 
+.btn-round {
+    padding: 0;
+    font-size: 20px;
+    border-radius: 50%;
+}
+
 .btn-bottom-right {
     width: 56px;
     height: 56px;
