--- a/src/app/initiative-tracker/initiative-list/initiative-list.component.scss
+++ b/src/app/initiative-tracker/initiative-list/initiative-list.component.scss
@@ -3,46 +3,43 @@
 .initiative {
     margin-bottom: 0;
 
-    th {
+    .row {
+        line-height: 2.5;
+    }
+
+    .header {
+        border-bottom: 1px solid $brand-primary;
         font-size: 14px;
         font-weight: bold;
         text-transform: uppercase;
     }
 
-    thead tr th {
-        border-bottom: 1px solid $brand-primary;
+    .col-active,
+    .col-remove,
+    .col-hp {
+        text-align: center;
+    }
+
+    .col-initiative {
+        text-align: center;
+    }
+
+    .body,
+    .footer {
+        .col-remove {
+            color: $brand-primary;
+            font-size: 24px;
+            line-height: 1.6;
+        }
     }
 
     .active {
-        td {
-            background: rgba($brand-primary, 0.7) !important;
-            color: white;
-        }
+        background: rgba($brand-primary, 0.7) !important;
+        color: white;
     }
 
     .disabled {
         background: #eee;
         color: grey;
     }
-}
-
-.col-active,
-.col-remove {
-    width: 8.33%;
-    text-align: center;
-}
-
-.col-initiative {
-    width: 16.66%;
-    text-align: center;
-}
-
-.col-remove {
-    color: $brand-primary;
-    padding: 0.4rem;
-    font-size: 24px;
-}
-
-.initiative-footer {
-    padding: 0.75rem;
 }
