Add ability bonuses.

--- a/src/app/core/about/about.component.html
+++ b/src/app/core/about/about.component.html
@@ -12,7 +12,7 @@
   <p>This project would not have been possible without input from the below sources.</p>
 
   <h3>Wizards of the Coast</h3>
-  <p>All backgrounds, classes, races, spells, etc. are the property of <a href="https://www.wizards.com" target="_blank">Wizards of the Coast</a>. The <a routerLink="/character-generator">Character Generator</a> and similar tools just randomly generate references to these materials.</p>
+  <p>All backgrounds, classes, races, spells, etc. are the property of <a href="https://www.wizards.com" target="_blank">Wizards of the Coast</a>. The <a routerLink="/characters">Character Generator</a> and similar tools just randomly generate references to these materials.</p>
 
   <h3>FantasyNameGenerators</h3>
   <p>A lot of the names (specifically surnames of the form '[Adjective][noun]', like "Brokenshield") are inspired by <a href="https://www.fantasynamegenerators.com" target="_blank">fantasynamegenerators.com</a>, and you should definitely check out the site if you get the chance.</p>
