--- a/src/app/shared/inline-edit/inline-edit.component.scss
+++ b/src/app/shared/inline-edit/inline-edit.component.scss
@@ -7,4 +7,5 @@ label {
 input {
     font-family: $font-family-sans-serif !important;
     margin-top: 10px !important;
+    margin-bottom: 10px !important;
 }
