--- a/src/app/initiative-tracker/hp-modal/hp-modal.component.scss
+++ b/src/app/initiative-tracker/hp-modal/hp-modal.component.scss
@@ -5,4 +5,13 @@
         height: 100%;
         font-size: 32px;
     }
+
+    .col-fifth {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 20%;
+        flex: 0 0 20%;
+        max-width: 20%;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
