--- a/src/app/initiative-tracker/initiative-list/initiative-list.component.html
+++ b/src/app/initiative-tracker/initiative-list/initiative-list.component.html
@@ -26,11 +26,14 @@
           <button class="btn" [ngClass]="{'btn-primary': (creature.currentHp > 0 && creature.currentHp < creature.maximumHp), 'btn-success': creature.currentHp >= creature.maximumHp }"
             (click)="onHPClick($event, creature)">
           {{creature.currentHp}} / {{creature.maximumHp}}
-        </button></div>
+        </button>
+        </div>
         <div class="col-md-1 col-2 col-remove"><a href="#" (click)="onRemoveClick($event, creature)"><i class="mdi mdi-minus-circle"></i></a></div>
       </div>
       <div class="row notes small">
-        <div class="offset-md-1 offset-2 col-md-11 col-10"><span class="note-title">Notes:</span> <dnd-inline-edit class="muted creature-notes" label="Add notes" [(ngModel)]="creature.notes"></dnd-inline-edit></div>
+        <div class="offset-md-1 offset-2 col-md-11 col-10"><span class="note-title">Notes:</span>
+          <dnd-inline-edit class="muted creature-notes" label="Add notes" [(ngModel)]="creature.notes"></dnd-inline-edit>
+        </div>
       </div>
     </div>
     <div class="row" *ngIf="!creatures || creatures.length === 0">
@@ -39,24 +42,24 @@
   </div>
   <div class="footer bt-thin pt-2">
     <div class="row">
-      <div class="col-md-1 col-2">
+      <div class="col-lg-1 col-md-2 col-3">
         <label class="sr-only" for="name">Count</label>
         <input type="number" class="form-control" id="count" placeholder="#" [(ngModel)]="newCreatureCount" (keydown.enter)="onAddToInitiativeClick()"
           #count>
       </div>
-      <div class="col-md-6 col-4">
+      <div class="col-lg-6 col-md-10 col-9">
         <label class="sr-only" for="name">Name</label>
         <input type="text" class="form-control" id="name" placeholder="Goblin" [(ngModel)]="newCreature.name" (keydown.enter)="onAddToInitiativeClick()">
       </div>
-      <div class="col-md-2 col-2">
+      <div class="col-lg-2 col-md-6 col-6 col-initiative">
         <label class="sr-only" for="initiative">Initiative</label>
         <input type="text" class="form-control" id="initiative" placeholder="1d20 + 2" [(ngModel)]="newCreature.initiative" (keydown.enter)="onAddToInitiativeClick()">
       </div>
-      <div class="col-md-2 col-2">
+      <div class="col-lg-2 col-md-6 col-6 col-hp">
         <label class="sr-only" for="hp">HP</label>
         <input type="text" class="form-control" id="hp" placeholder="HP" [(ngModel)]="newCreature.maximumHp" (keydown.enter)="onAddToInitiativeClick()">
       </div>
-      <div class="col-md-1 col-2 col-remove">
+      <div class="col-lg-1 col-md-12 col-12 col-remove">
         <a href="#" (click)="onAddToInitiativeClick($event)"><i class="mdi mdi-plus-circle"></i><label class="sr-only">Add to Initiative</label></a>
       </div>
     </div>
