--- a/src/app/initiative-tracker/initiative-list/initiative-list.component.scss
+++ b/src/app/initiative-tracker/initiative-list/initiative-list.component.scss
@@ -68,6 +68,11 @@
 
 @include media-breakpoint-down(md) {
     .initiative {
+        .body {
+            .col-hp button {
+                width: 100%;
+            }
+        }
         .footer {
             .col-initiative,
             .col-hp {
