Add initiative button in the bottom right.

--- a/src/app/initiative-tracker/initiative-header/initiative-header.component.html
+++ b/src/app/initiative-tracker/initiative-header/initiative-header.component.html
@@ -20,7 +20,8 @@
     </div>
     <div class="col-md-3 col-6 level">
       <div class="attribute-block">
-        <button class="btn btn-lg btn-primary" (click)="nextClick.emit(null)">Next</button>
+        <button class="btn btn-lg btn-primary btn-icon" (click)="nextClick.emit(null)"><i class="mdi mdi-play"></i> Next</button>
+        <button class="btn btn-lg btn-primary btn-bottom-right" (click)="nextClick.emit(null)"><i class="mdi mdi-play"></i><span class="sr-only">Next</span></button>
       </div>
     </div>
   </div>
