--- a/src/app/initiative-tracker/initiative-tracker.component.html
+++ b/src/app/initiative-tracker/initiative-tracker.component.html
@@ -10,5 +10,5 @@
 </div>
 <div class="container">
   <dnd-initiative-header (nextClick)="onNextClick()" [currentInitiative]="currentInitiative" [currentRound]="currentRound"></dnd-initiative-header>
-  <dnd-initiative-list [creatures]="creatures" [currentInitiative]="currentInitiative"></dnd-initiative-list>
+  <dnd-initiative-list #list [currentInitiative]="currentInitiative"></dnd-initiative-list>
 </div>
