--- a/src/app/initiative-tracker/hp-modal/hp-modal.component.html
+++ b/src/app/initiative-tracker/hp-modal/hp-modal.component.html
@@ -7,21 +7,15 @@
   </div>
   <div class="modal-body">
     <div class="hp-mod row">
-       <!-- <div class="col-2"><button class="btn btn-block" (click)="modifyHp(-10)">-10</button></div>
-      <div class="col-2"><button class="btn btn-block" (click)="modifyHp(-1)">-1</button></div>
-      <div class="col-2 text-center"><span class="">{{hitPoints}}</span></div>
-      <div class="col-2"><button class="btn btn-block" (click)="modifyHp(1)">1</button></div>
-      <div class="col-2"><button class="btn btn-block" (click)="modifyHp(10)">10</button></div>  -->
-
-         <div class="col-fifth"><button class="btn btn-block" (click)="modifyHp(-10)">-10</button></div>
-      <div class="col-fifth"><button class="btn btn-block" (click)="modifyHp(-1)">-1</button></div>
+      <div class="col-fifth"><button class="btn btn-block btn-grey" (click)="modifyHp(-10)">-10</button></div>
+      <div class="col-fifth"><button class="btn btn-block btn-grey" (click)="modifyHp(-1)">-1</button></div>
       <div class="col-fifth text-center"><span class="">{{hitPoints}}</span></div>
-      <div class="col-fifth"><button class="btn btn-block" (click)="modifyHp(1)">1</button></div>
-      <div class="col-fifth"><button class="btn btn-block" (click)="modifyHp(10)">10</button></div>  
+      <div class="col-fifth"><button class="btn btn-block btn-grey" (click)="modifyHp(1)">+1</button></div>
+      <div class="col-fifth"><button class="btn btn-block btn-grey" (click)="modifyHp(10)">+10</button></div>
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="pull-left btn btn-lg" (click)="close()">Cancel</button>
+    <button type="button" class="btn btn-lg btn-grey" (click)="close()">Cancel</button>
     <button type="button" class="btn btn-lg btn-success" (click)="onHealClick()">Heal</button>
     <button type="button" class="btn btn-lg btn-primary" (click)="onHarmClick()">Harm</button>
   </div>
