--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,10 @@ $btn-secondary-color:              #fff !default;
 $btn-secondary-bg:                 $brand-secondary !default;
 $btn-secondary-border:             $btn-secondary-bg !default;
 
+$btn-grey-color:                   #000;
+$btn-grey-bg:                      rgb(221, 221, 221);
+$btn-grey-border:                  $btn-grey-bg;
+
 $btn-border-radius: 2px;
 $btn-border-radius-sm: 2px;
 $btn-border-radius-lg: 2px;
